Student can see the grades of finished courses

--- a/src/main/resources/templates/client/profile.html
+++ b/src/main/resources/templates/client/profile.html
@@ -254,46 +254,55 @@
                         <div th:each="chunk : ${chunkedCourses}" class="col-sm-6 mb-3">
                             <div class="card h-100">
                                 <div class="card-body">
-                                <span th:if="${role.equalsIgnoreCase('Teacher')}">
-                                <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"
-                                                                              th:text="'Journals '"></i></h6>
-                                </span>
+                                    <span th:if="${role.equalsIgnoreCase('Teacher')}">
+                                        <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"
+                                                                              th:text="'Journals '"></i>
+                                        </h6>
+                                    </span>
                                     <span th:if="${role.equalsIgnoreCase('Student')}">
-                                    <div class="row">
-                                        <h6 class="d-flex align-items-center mb-3"><i
-                                                class="material-icons text-info mr-2" th:text="'Courses '"></i></h6>
-                                        <div class="dropdown show mb-2">
-                                             <a class="btn btn-sm dropdown-toggle" href="#" role="button"
-                                                id="dropdownMenuLink" data-toggle="dropdown"
-                                                aria-haspopup="true" aria-expanded="false">
-                                                Filter By...
-                                            </a>
-                                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                <a class="dropdown-item"
-                                                   th:href="'/main-page/profile?userId=' + ${userId} + '&filter=ALL'">All</a>
-                                                <a class="dropdown-item"
-                                                   th:href="'/main-page/profile?userId=' + ${userId} + '&filter=NOT_BEGUN'">Not Begun</a>
-                                                <a class="dropdown-item"
-                                                   th:href="'/main-page/profile?userId=' + ${userId} + '&filter=ONGOING'">Ongoing</a>
-                                                <a class="dropdown-item"
-                                                   th:href="'/main-page/profile?userId=' + ${userId} + '&filter=FINISHED'">Finished</a>
+                                        <div class="d-flex flex-row">
+                                            <h6 class="d-flex align-items-center mb-3 me-2"><i
+                                                    class="material-icons text-info mr-2" th:text="'Courses '"></i></h6>
+                                            <div class="dropdown show mb-3">
+                                                 <a class="btn btn-sm dropdown-toggle" href="#" role="button"
+                                                    id="dropdownMenuLink" data-toggle="dropdown"
+                                                    aria-haspopup="true" aria-expanded="false">
+                                                    Filter By...
+                                                </a>
+                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                    <a class="dropdown-item"
+                                                       th:href="'/main-page/profile?userId=' + ${userId} + '&filter=ALL'">All</a>
+                                                    <a class="dropdown-item"
+                                                       th:href="'/main-page/profile?userId=' + ${userId} + '&filter=NOT_BEGUN'">Not Begun</a>
+                                                    <a class="dropdown-item"
+                                                       th:href="'/main-page/profile?userId=' + ${userId} + '&filter=ONGOING'">Ongoing</a>
+                                                    <a class="dropdown-item"
+                                                       th:href="'/main-page/profile?userId=' + ${userId} + '&filter=FINISHED'">Finished</a>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </span>
+                                    </span>
                                     <div th:each="course : ${chunk}">
                                     <span th:if="${role.equalsIgnoreCase('Teacher')}">
                                         <h6><a class="teacher-link"
                                                th:href="@{/main-page/profile/journal(courseName=${course.courseName})}"
                                                th:text="${course.courseName}"></a></h6>
                                     </span>
-                                        <h6 th:if="${role.equalsIgnoreCase('Student')}"
-                                            th:text="${course.courseName}"></h6>
-                                        <div class="progress mb-3" style="height: 5px">
-                                            <div class="progress-bar bg-primary" role="progressbar"
-                                                 th:style="'width:' + ${course.progress} + '%'"
-                                                 th:aria-valuenow="${course.progress}" aria-valuemin="0"
-                                                 aria-valuemax="100"></div>
+                                        <div th:if="${role.equalsIgnoreCase('Student')}">
+                                            <h6 th:if="${course.courseStatus.name() != 'FINISHED'}"
+                                                th:text="${course.courseName}">
+                                            </h6>
+                                            <div class="d-flex flex-row" th:if="${course.courseStatus.name() == 'FINISHED'}">
+                                                <h6 th:text="${course.courseName}"></h6>
+                                                <span class="text-secondary ms-2" th:text="'grade: ' + ${course.grade}"></span>
+                                            </div>
+                                            <div class="progress mb-3" style="height: 5px">
+                                                <div class="progress-bar bg-primary" role="progressbar"
+                                                     th:style="'width:' + ${course.progress} + '%'"
+                                                     th:aria-valuenow="${course.progress}" aria-valuemin="0"
+                                                     aria-valuemax="100">
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
