--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -2,12 +2,84 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+
+
     <title>Elective</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+        body {
+            margin-top: 0;
+            background-color: #e2e8f0;
+        }
+
+        .shadow {
+            box-shadow: 0 0 3px rgb(53 64 78 / 20%) !important;
+        }
+
+        .rounded {
+            border-radius: 5px !important;
+        }
+
+        .bg-light {
+            background-color: #f7f8fa !important;
+        }
+
+        .bg-primary, .btn-primary, .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.focus, .btn-outline-primary:not(:disabled):not(.disabled):active, .badge-primary, .nav-pills .nav-link.active, .pagination .active a, .custom-control-input:checked ~ .custom-control-label:before, #preloader #status .spinner > div, .social-icon li a:hover, .back-to-top:hover, .back-to-home a, ::selection, #topnav .navbar-toggle.open span:hover, .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots.clickable .owl-dot:hover span, .watch-video a .play-icon-circle, .sidebar .widget .tagcloud > a:hover, .flatpickr-day.selected, .flatpickr-day.selected:hover, .tns-nav button.tns-nav-active, .form-check-input.form-check-input:checked {
+            background-color: #556f96 !important;
+        }
+
+        .badge {
+            padding: 5px 8px;
+            border-radius: 3px;
+            letter-spacing: 0.5px;
+            font-size: 12px;
+        }
+
+        .btn-primary, .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.focus, .btn-outline-primary:not(:disabled):not(.disabled):active {
+            box-shadow: 0 3px 7px rgb(85, 111, 150) !important;
+        }
+
+        .btn-primary, .btn-outline-primary, .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.focus, .btn-outline-primary:not(:disabled):not(.disabled):active, .bg-soft-primary .border, .alert-primary, .alert-outline-primary, .badge-outline-primary, .nav-pills .nav-link.active, .pagination .active a, .form-group .form-control:focus, .form-group .form-control.active, .custom-control-input:checked ~ .custom-control-label:before, .custom-control-input:focus ~ .custom-control-label::before, .form-control:focus, .social-icon li a:hover, #topnav .has-submenu.active.active .menu-arrow, #topnav.scroll .navigation-menu > li:hover > .menu-arrow, #topnav.scroll .navigation-menu > li.active > .menu-arrow, #topnav .navigation-menu > li:hover > .menu-arrow, .flatpickr-day.selected, .flatpickr-day.selected:hover, .form-check-input:focus, .form-check-input.form-check-input:checked, .container-filter li.active, .container-filter li:hover {
+            border-color: #556f96 !important;
+        }
+
+        .bg-primary, .btn-primary, .btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.focus, .btn-outline-primary:not(:disabled):not(.disabled):active, .badge-primary, .nav-pills .nav-link.active, .pagination .active a, .custom-control-input:checked ~ .custom-control-label:before, #preloader #status .spinner > div, .social-icon li a:hover, .back-to-top:hover, .back-to-home a, ::selection, #topnav .navbar-toggle.open span:hover, .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots.clickable .owl-dot:hover span, .watch-video a .play-icon-circle, .sidebar .widget .tagcloud > a:hover, .flatpickr-day.selected, .flatpickr-day.selected:hover, .tns-nav button.tns-nav-active, .form-check-input.form-check-input:checked {
+            background-color: #556f96 !important;
+        }
+
+        .btn {
+            padding: 8px 20px;
+            outline: none;
+            text-decoration: none;
+            font-size: 16px;
+            letter-spacing: 0.5px;
+            transition: all 0.3s;
+            font-weight: 600;
+            border-radius: 5px;
+        }
+
+        .btn-primary {
+            background-color: #556f96 !important;
+            border: 1px solid #556f96 !important;
+            color: #fff !important;
+            box-shadow: 0 3px 7px rgb(85, 111, 150);
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(54, 73, 98) !important;
+        }
+
+        button.nav-link {
+            border: none !important;
+            background-color: #f7f8fa !important;
+        }
+
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -19,7 +91,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
     <a class="navbar-brand ps-4 pe-4" href="/main-page">Electives</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -44,64 +116,48 @@
         </ul>
     </div>
 </nav>
-<br>
-<div class="container">
+
+<div class="container pt-4">
     <div class="d-flex justify-content-center align-items-center h-100">
         <div class="text-center">
             <h1>Welcome on Main Page!</h1>
         </div>
     </div>
-
-
-    <div class="container">
-        <div class="dropdown show mb-2">
-            <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-               aria-haspopup="true" aria-expanded="false">
-                Sort By...
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="/main-page?sort=name(a-z)">Name (a-z)</a>
-                <a class="dropdown-item" href="/main-page?sort=name(z-a)">Name (z-a)</a>
-                <a class="dropdown-item" href="/main-page?sort=duration">Duration</a>
-                <a class="dropdown-item" href="/main-page?sort=number-of-students">Number of Students</a>
-            </div>
+    <div class="dropdown show mb">
+        <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+            Sort By...
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="/main-page?sort=name(a-z)">Name (a-z)</a>
+            <a class="dropdown-item" href="/main-page?sort=name(z-a)">Name (z-a)</a>
+            <a class="dropdown-item" href="/main-page?sort=duration">Duration</a>
+            <a class="dropdown-item" href="/main-page?sort=number-of-students">Number of Students</a>
         </div>
-        <div class="row">
-            <div th:each="course : ${courses}" class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100">
-                    <div class="card-body">
-                        <h4 class="card-title mb-2" th:text="${course.courseName}"></h4>
-                        <h6 class="card-subtitle mb-2 text-muted" th:text="'Topic: ' + ${course.topic.topicName}"></h6>
-                        <h6 class="card-subtitle mb-2 text-muted"
-                            th:text="'Teacher: ' + ${course.getTeacher().getFirstName() + ' ' + course.getTeacher().getSecondName()}"></h6>
-                        <h6 class="card-subtitle mb-2 text-muted"
-                            th:text="'Duration: ' + ${course.duration + ' days'}"></h6>
-                        <h6 class="card-subtitle mb-2 text-muted"
-                            th:text="${course.numberOfStudents + ' students already joined the course'}"></h6>
-                        <p class="card-text" th:text="${course.description}"></p>
-                        <p class="card-text"><small class="text-muted" th:text="${course.dateStart}"></small></p>
-                        <div class="d-flex justify-content-center">
-                            <div sec:authorize="isAuthenticated()">
-                                <form th:action="@{/assign}" method="POST">
-                                    <input type="hidden" name="userId" th:value="${userId}">
-                                    <input type="hidden" name="courseId" th:value="${course.idCourse}">
-                                    <span th:if="${course.assignable}">
-                                        <a class="btn btn-default me-2">You have joined this course!</a>
-                                    </span>
-                                    <span th:unless="${course.assignable}">
-                                        <button type="submit" class="btn btn-success">Assign</button>
-                                    </span>
-                                </form>
-                            </div>
-                            <div class="d-flex flex-row" sec:authorize="isAnonymous()">
-                                <a class="btn btn-success" th:href="@{/login}">Log in to assign</a>
-                            </div>
-                        </div>
+    </div>
+    <div class="row">
+        <div th:each="course : ${courses}" class="col-lg-4 col-md-6 col-12 pt-2">
+            <div class="card border-0 bg-light rounded shadow">
+                <div class="card-body p-4">
+                    <span class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0" th:text="${course.topic.topicName}"></span>
+                    <h5 th:text="${course.courseName}"></h5>
+                    <div class="mt-3">
+                        <span class="text-muted d-block mb-1"><i class="fa fa-calendar" aria-hidden="true" th:text="' Starts on ' + ${course.dateStart}"></i></span>
+                        <span class="text-muted d-block mb-1"><i class="fa fa-hourglass-start" aria-hidden="true" th:text="' Duration ' + ${course.duration} + ' days'"></i></span>
+                        <span class="text-muted d-block"><i class="fa fa-user-circle-o" aria-hidden="true" th:text="' ' + ${course.numberOfStudents + ' students on course'}"></i></span>
+                    </div>
+                    <div class="d-flex justify-content-center mt-3">
+                        <a href="#" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript">
+
+</script>
 </body>
 </html>
