--- a/src/main/resources/templates/client/teachers.html
+++ b/src/main/resources/templates/client/teachers.html
@@ -2,20 +2,118 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+
+
     <title>Elective</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
           crossorigin="anonymous">
-    <style>
-        .center-column {
-            max-width: max-content;
-            margin: 0 auto;
+    <style type="text/css">
+        body {
+            margin-top: 0;
+            background-color: #e2e8f0;
+        }
+
+        .card {
+            margin-bottom: 24px;
+            box-shadow: 0 2px 3px #e4e8f0;
+        }
+
+        .card {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            min-width: 0;
+            word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 1px solid #eff0f2;
+            border-radius: 10px;
+        }
+
+        .avatar-md {
+            height: 4rem;
+            width: 4rem;
+        }
+
+        .rounded-circle {
+            border-radius: 50% !important;
+        }
+
+        .img-thumbnail {
+            padding: 0.25rem;
+            background-color: #f1f3f7;
+            border: 1px solid #eff0f2;
+            border-radius: 0.75rem;
+        }
+
+        .avatar-title {
+            align-items: center;
+            background-color: #3b76e1;
+            color: #fff;
+            display: flex;
+            font-weight: 500;
+            height: 100%;
+            justify-content: center;
+            width: 100%;
+        }
+
+        .bg-soft-primary {
+            background-color: rgba(59, 118, 225, .25) !important;
+        }
+
+        a {
+            text-decoration: none !important;
+        }
+
+        .badge-soft-danger {
+            color: #f56e6e !important;
+            background-color: rgba(245, 110, 110, .1);
+        }
+
+        .badge-soft-success {
+            color: #63ad6f !important;
+            background-color: rgba(99, 173, 111, .1);
+        }
+
+        .mb-0 {
+            margin-bottom: 0 !important;
+        }
+
+        .badge {
+            display: inline-block;
+            padding: 0.25em 0.6em;
+            font-size: 75%;
+            font-weight: 500;
+            line-height: 1;
+            color: #fff;
+            text-align: center;
+            white-space: nowrap;
+            vertical-align: baseline;
+            border-radius: 5px;
+        }
+        .btn-primary {
+            background-color: #556f96 !important;
+            border: 1px solid #556f96 !important;
+            color: #fff !important;
+            box-shadow: 0 3px 7px rgb(85, 111, 150);
+        }
+
+        .btn-primary:hover {
+            background-color: rgb(54, 73, 98) !important;
         }
     </style>
 </head>
 <body>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css"
+      integrity="sha512-pVCM5+SN2+qwj36KonHToF2p1oIvoU3bsqxphdOIWMYmgr4ZqD3t5DjKvvetKhXGc/ZG5REYTT6ltKfExEei/Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"/>
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css"
+      integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous"/>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -25,6 +123,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
     <a class="navbar-brand ps-4 pe-4" href="/main-page">Electives</a>
@@ -32,7 +131,7 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="nav-link me-4" href="/main-page/teachers">Teachers</a>
+    <a class="nav-link me-4" href="javascript:void(0)">Teachers</a>
     <a class="nav-link me-4" href="/main-page/topics">Topics</a>
     <form th:action="@{/main-page/profile}" method="GET">
         <input type="hidden" name="userId" th:value="${userId}">
@@ -50,51 +149,112 @@
         </ul>
     </div>
 </nav>
-<br>
-<div class="container">
+
+<div class="container mt-5">
+    <!--    <div class="row align-items-center">-->
+    <!--        <div class="col-md-6">-->
+    <!--            <div class="mb-3">-->
+    <!--                <h5 class="card-title">Contact List <span class="text-muted fw-normal ms-2">(834)</span></h5>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--        <div class="col-md-6">-->
+    <!--            <div class="d-flex flex-wrap align-items-center justify-content-end gap-2 mb-3">-->
+    <!--                <div>-->
+    <!--                    <ul class="nav nav-pills">-->
+    <!--                        <li class="nav-item">-->
+    <!--                            <a href="#" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="top"-->
+    <!--                               title="List"><i class="bx bx-list-ul"></i></a>-->
+    <!--                        </li>-->
+    <!--                        <li class="nav-item">-->
+    <!--                            <a aria-current="page" href="#"-->
+    <!--                               class="router-link-active router-link-exact-active nav-link active"-->
+    <!--                               data-bs-toggle="tooltip" data-bs-placement="top" title="Grid"><i-->
+    <!--                                    class="bx bx-grid-alt"></i></a>-->
+    <!--                        </li>-->
+    <!--                    </ul>-->
+    <!--                </div>-->
+    <!--                <div>-->
+    <!--                    <a href="#" data-bs-toggle="modal" data-bs-target=".add-new" class="btn btn-primary"><i-->
+    <!--                            class="bx bx-plus me-1"></i> Add New</a>-->
+    <!--                </div>-->
+    <!--                <div class="dropdown">-->
+    <!--                    <a class="btn btn-link text-muted py-1 font-size-16 shadow-none dropdown-toggle" href="#"-->
+    <!--                       role="button" data-bs-toggle="dropdown" aria-expanded="false"><i-->
+    <!--                            class="bx bx-dots-horizontal-rounded"></i></a>-->
+    <!--                    <ul class="dropdown-menu dropdown-menu-end">-->
+    <!--                        <li><a class="dropdown-item" href="#">Action</a></li>-->
+    <!--                        <li><a class="dropdown-item" href="#">Another action</a></li>-->
+    <!--                        <li><a class="dropdown-item" href="#">Something else here</a></li>-->
+    <!--                    </ul>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--        </div>-->
+    <!--    </div>-->
     <div class="row">
-        <div class="col center-column text-center">
-            <h1>Teachers</h1>
-        </div>
-
-
-        <div class="container">
-            <!--    <div class="dropdown show mb-2">-->
-            <!--      <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"-->
-            <!--         aria-haspopup="true" aria-expanded="false">-->
-            <!--        Sort By...-->
-            <!--      </a>-->
-            <!--      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">-->
-            <!--        <a class="dropdown-item" href="/main-page?sort=name(a-z)">Name (a-z)</a>-->
-            <!--        <a class="dropdown-item" href="/main-page?sort=name(z-a)">Name (z-a)</a>-->
-            <!--        <a class="dropdown-item" href="/main-page?sort=duration">Duration</a>-->
-            <!--        <a class="dropdown-item" href="/main-page?sort=number-of-students">Number of Students</a>-->
-            <!--      </div>-->
-            <!--    </div>-->
-            <div class="row">
-                <div th:each="teacher : ${teachers}" class="col-lg-4 col-md-6 mb-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <div class="d-flex justify-content-center mb-2">
-                                <img height="210" width="210" th:src="@{'data:image/png;base64,' + ${teacher.base64Image}}"/>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <h5 class="card-title" th:text="${teacher.firstName} + ' ' + ${teacher.secondName}"></h5>
-                            </div>
-                            <div class="d-flex justify-content-center">
-                                <form th:action="@{/main-page/teacher/courses}" method="GET">
-                                    <input type="hidden" name="teacherId" th:value="${teacher.id}">
-                                    <button
-                                            class="btn btn-success mt-2 mb-2">See courses
-                                    </button>
-                                </form>
-                            </div>
+        <div th:each="teacher : ${teachers}" class="col-xl-3 col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center">
+                        <div><img th:src="@{'data:image/png;base64,' + ${teacher.base64Image}}" alt
+                                  class="avatar-md rounded-circle img-thumbnail"/></div>
+                        <div class="flex-1 ms-3">
+                            <h5 class="font-size-16 mb-1"><a class="text-dark"
+                                                             th:text="${teacher.firstName} + ' ' + ${teacher.secondName}"></a>
+                            </h5>
+                            <span class="badge badge-soft-success mb-0">Teacher</span>
                         </div>
+                    </div>
+                    <div class="mt-3 pt-1">
+                        <p class="text-muted mb-0"><span
+                                class="fa fa-phone-square font-size-15 align-middle" aria-hidden="true"
+                                th:text="'    ' + ${teacher.phone}"></span></p>
+                        <p class="text-muted mb-0 mt-2"><i
+                                class="fa fa-envelope font-size-15 align-middle" aria-hidden="true"></i> <a
+                                th:text="${teacher.email}"></a>
+                        </p>
+                        <p class="text-muted mb-0 mt-2"><span
+                                class="mdi mdi-google-maps font-size-15 align-middle pe-2"
+                                th:text="'    ' + ${teacher.locationCity}"></span></p>
+                    </div>
+                    <div class="d-flex justify-content-center gap-2 pt-4 ">
+                        <form th:action="@{/main-page/teacher/courses}" method="GET">
+                            <input type="hidden" name="teacherId" th:value="${teacher.id}">
+                            <button
+                                    class="btn btn-primary"><i
+                                    class="fa fa-graduation-cap me-1"></i>See courses
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="row g-0 align-items-center pb-4">
+            <div class="col-sm-6">
+                <div><p class="mb-sm-0">Showing 1 to 10 of 57 entries</p></div>
+            </div>
+            <div class="col-sm-6">
+                <div class="float-sm-end">
+                    <ul class="pagination mb-sm-0">
+                        <li class="page-item disabled">
+                            <a href="#" class="page-link"><i class="mdi mdi-chevron-left"></i></a>
+                        </li>
+                        <li class="page-item active"><a href="#" class="page-link">1</a></li>
+                        <li class="page-item"><a href="#" class="page-link">2</a></li>
+                        <li class="page-item"><a href="#" class="page-link">3</a></li>
+                        <li class="page-item"><a href="#" class="page-link">4</a></li>
+                        <li class="page-item"><a href="#" class="page-link">5</a></li>
+                        <li class="page-item">
+                            <a href="#" class="page-link"><i class="mdi mdi-chevron-right"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript">
+
+    </script>
 </div>
 </body>
 </html>
