--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -57,7 +57,7 @@
             letter-spacing: 0.5px;
             transition: all 0.3s;
             font-weight: 600;
-            border-radius: 5px;
+            border-radius: 10px;
         }
 
         .btn-primary {
@@ -79,6 +79,33 @@
         a {
             text-decoration: none;
         }
+
+        .badge-soft-not-begun {
+            color: #63ad6f !important;
+            background-color: rgba(99, 173, 111, .1);
+        }
+
+        .badge-soft-ongoing {
+            color: #8f880a !important;
+            background-color: rgba(243, 224, 17, 0.1);
+        }
+
+        .badge-soft-finished {
+            color: #f56e6e !important;
+            background-color: rgba(245, 110, 110, .1);
+        }
+
+        .dropdown-menu {
+            max-height: 250px;
+            overflow-y: auto;
+        }
+        .btn-sm-custom {
+            padding: 0.25rem 0.5rem;
+            font-size: 14px;
+            line-height: 1.5;
+            border-radius: 10px;
+            width: 100px;
+        }
     </style>
 </head>
 <body>
@@ -93,7 +120,7 @@
         crossorigin="anonymous"></script>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-    <a class="navbar-brand ps-4 pe-4" href="/main-page">Electives</a>
+    <a class="navbar-brand ps-4 pe-4" href="javascript:void(0)">Electives</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -123,28 +150,75 @@
             <h1>Welcome on Main Page!</h1>
         </div>
     </div>
-    <div class="dropdown show mb">
-        <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">
-            Sort By...
-        </a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="/main-page?sort=name(a-z)">Name (a-z)</a>
-            <a class="dropdown-item" href="/main-page?sort=name(z-a)">Name (z-a)</a>
-            <a class="dropdown-item" href="/main-page?sort=duration">Duration</a>
-            <a class="dropdown-item" href="/main-page?sort=number-of-students">Number of Students</a>
+    <div class="d-flex flex-row">
+        <div class="dropdown show mb">
+            <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="sort" data-toggle="dropdown"
+               aria-haspopup="true" aria-expanded="false">
+                Sort By...
+            </a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="/main-page?sort=name(a-z)">Name (a-z)</a>
+                <a class="dropdown-item" href="/main-page?sort=name(z-a)">Name (z-a)</a>
+                <a class="dropdown-item" href="/main-page?sort=duration">Duration</a>
+                <a class="dropdown-item" href="/main-page?sort=number-of-students">Number of Students</a>
+            </div>
+        </div>
+        <div class="ms-2">
+            <form th:action="@{/main-page}" method="get">
+                <div class="form-group">
+                    <div class="dropdown show mb">
+                        <a class="btn btn-sm dropdown-toggle" href="#" role="button" id="filter" data-toggle="dropdown"
+                           aria-haspopup="true" aria-expanded="false">
+                            Topics
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <div class="dropdown-item">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="all" name="topics" th:value="'All'">
+                                    <label class="form-check-label" th:text="'All'"></label>
+                                </div>
+                            </div>
+                            <div class="dropdown-item" th:each="topic : ${topics}">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="topic" name="topics" th:value="${topic.topicName}">
+                                    <label class="form-check-label" th:for="${'topic-' + topic.topicName}" th:text="${topic.topicName}"></label>
+                                </div>
+                            </div>
+                            <div class="dropdown-item d-flex justify-content-center">
+                                <button type="submit" class="btn btn-sm-custom btn-primary">Filter</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
     <div class="row">
         <div th:each="course : ${courses}" class="col-lg-4 col-md-6 col-12 pt-2">
             <div class="card border-0 bg-light rounded shadow">
                 <div class="card-body p-4">
-                    <span class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0" th:text="${course.topic.topicName}"></span>
-                    <h5 th:text="${course.courseName}"></h5>
-                    <div class="mt-3">
-                        <span class="text-muted d-block mb-1"><i class="fa fa-calendar" aria-hidden="true" th:text="' Starts on ' + ${course.dateStart}"></i></span>
-                        <span class="text-muted d-block mb-1"><i class="fa fa-hourglass-start" aria-hidden="true" th:text="' Duration ' + ${course.duration} + ' days'"></i></span>
-                        <span class="text-muted d-block"><i class="fa fa-user-circle-o" aria-hidden="true" th:text="' ' + ${course.numberOfStudents + ' students on course'}"></i></span>
+                    <span class="badge rounded-pill bg-primary float-md-end mb-3 mb-sm-0"
+                          th:text="${course.topic.topicName}"></span>
+                    <div class="flex-1">
+                        <h5 class="font-size-16 mb-1"><a class="text-dark"
+                                                         th:text="${course.courseName}"></a>
+                        </h5>
+                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('not_begun')}"
+                              class="badge badge-soft-not-begun">Not Begun</span>
+                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('ongoing')}"
+                              class="badge badge-soft-ongoing">Ongoing</span>
+                        <span th:if="${course.courseStatus.name().equalsIgnoreCase('finished')}"
+                              class="badge badge-soft-finished">Finished</span>
+                    </div>
+                    <div class="mt-2">
+                        <span class="text-muted d-block mb-1"><i class="fa fa-calendar" aria-hidden="true"
+                                                                 th:text="' Starts on ' + ${course.dateStart}"></i></span>
+                        <span class="text-muted d-block mb-1"><i class="fa fa-calendar" aria-hidden="true"
+                                                                 th:text="' Finished on ' + ${course.dateEnd}"></i></span>
+                        <span class="text-muted d-block mb-1"><i class="fa fa-hourglass-start" aria-hidden="true"
+                                                                 th:text="' Duration ' + ${course.duration} + ' days'"></i></span>
+                        <span class="text-muted d-block"><i class="fa fa-user-circle-o" aria-hidden="true"
+                                                            th:text="' ' + ${course.numberOfStudents + ' students on course'}"></i></span>
                     </div>
                     <div class="d-flex justify-content-center mt-3">
                         <a href="#" class="btn btn-primary">View Details</a>
