--- a/src/main/resources/templates/administration/courses/addCourse.html
+++ b/src/main/resources/templates/administration/courses/addCourse.html
@@ -8,7 +8,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
         crossorigin="anonymous">
 </head>
-<body>
+<body style="background: #e2e8f0">
 <br>
 <div class="container">
   <div class="row">
@@ -37,7 +37,7 @@
             </select>
 
             <label>Course Description</label>
-            <textarea class="form-control" rows="3" name="description" th:field="*{description}" placeholder="Description"></textarea>
+            <textarea class="form-control mb-2" rows="3" name="description" th:field="*{description}" placeholder="Description"></textarea>
           </div>
 
           <div class="footer-body">
