--- a/src/main/resources/templates/administration/users/addUser.html
+++ b/src/main/resources/templates/administration/users/addUser.html
@@ -11,7 +11,7 @@
           crossorigin="anonymous">
 
 </head>
-<body>
+<body style="background: #e2e8f0">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
     <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
