--- a/src/main/resources/templates/administration/users/editUser.html
+++ b/src/main/resources/templates/administration/users/editUser.html
@@ -9,7 +9,7 @@
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
           crossorigin="anonymous">
 </head>
-<body>
+<body style="background: #e2e8f0">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
     <a class="navbar-brand ps-4 pe-4" href="/courses">Electives</a>
