--- a/src/main/resources/templates/client/profile.html
+++ b/src/main/resources/templates/client/profile.html
@@ -34,7 +34,7 @@
             background-color: #fff;
             background-clip: border-box;
             border: 0 solid rgba(0, 0, 0, .125);
-            border-radius: .25rem;
+            border-radius: 10px;
         }
 
         .card-body {
