--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
           crossorigin="anonymous">
     <!--    <link rel="shortcut icon" type="icon/ico" th:href="@{/assets/favicon.ico}"/>-->
 </head>
-<body style="background-color: #e1f2ea">
+<body style="background-color: #e2e8f0">
 <!--<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #178f13">-->
 <!--    <div class="container-fluid ms-3 me-3">-->
 <!--        <a class="navbar-brand">-->
